fix text wrapping

--- a/static/cartoview_feature_list/src/css/view.css
+++ b/static/cartoview_feature_list/src/css/view.css
@@ -1,7 +1,9 @@
 .element-flex {
     display: flex;
-    flex-grow: 1
+    flex-grow: 1;
+    flex:1
 }
+
 .row {
     display: flex;
     flex: 1;
@@ -26,7 +28,7 @@
 .big-avatar {
     width: 115px;
     margin-right: 10px;
-    height: auto;
+    height: 115px;
 }
 
 .list-header {
@@ -111,6 +113,7 @@
     z-index: 123123123
 }
 
+
 /* .layer-switcher {
     position: absolute;
     top: .5em !important;
@@ -122,7 +125,6 @@
 .layer-switcher.shown.ol-control {
     background-color: transparent !important;
 }
-
 
 .ol-control button {
     display: block;
@@ -140,12 +142,21 @@
     border: none;
     border-radius: 2px;
 }
+
 .ol-zoom.ol-control button {
     color: #3a3a3a !important;
 }
-.nav-drawer-close{
+
+.nav-drawer-close {
     padding: 10px
 }
+
+.text-wrap {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .ol-control {
     position: absolute;
     background-color: rgba(51, 51, 51, 0.58) !important;
@@ -156,6 +167,7 @@
 .ol-attribution button {
     display: unset;
 }
+
 .ol-control {
     position: absolute;
     background-color: rgba(51, 51, 51, 0.58) !important;
